【Modify】 	* update afnetworking version(3.0+)

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,3 +3,7 @@
 target 'Retrofit_Example' do
   pod 'Retrofit', :path => '../'
 end
+
+target 'Retrofit_Tests' do
+    pod 'Retrofit', :path => '../'
+end
